--- a/index.html
+++ b/index.html
@@ -6,7 +6,135 @@
     <title>Shaswata's Portfolio</title>
 </head>
 <body>
-    Hi, my name is Shaswata.
-    I am learning.
+    <h1>Hello I am Shaswata</h1>
+    <p>I am learning. I am attending neog camp by Tanay Pratap and I am making a library which will make my projects look good and consistent.</p>
+
+    <hr>
+
+    <h2>@typography</h2>
+
+    <h1>This is the biggest heading</h1> <h1>This is the biggest heading</h1>
+    <h2>This is the second biggest heading</h2>
+    <h3>This is the third biggest heading</h3>
+    <h4>This is the fourth biggest heading</h4>
+    <h5>This is the fifth biggest heading</h5>
+    <h6>This is the sixth biggest heading</h6>
+    <p>This is a normal text. This is free flowing and will wrap at the end like a paragraph.</p>
+    <small>This is relatively smaller text.</small> <small>This is relatively smaller text.</small> <small>This is relatively smaller text.</small>
+
+    <hr>
+
+    <h2>@container</h2>
+
+    <h3>fluid container</h3>
+    <div>This is a fluid container and will go till the end of the page</div>
+
+    <h3>center container</h3>
+    <div>This is a centered container and will go till the end of the page</div>
+
+    <hr>
+
+    <h2>@links</h2>
+
+    <a href="/">Primary Link</a>
+    <br>
+    <a href="/">Secondary Link</a>
+
+    <hr>
+
+    <h2>@lists</h2>
+
+    <h3>unordered list</h3>
+    <ul>
+        <li>item one</li>
+        <li>item two</li>
+        <li>item three</li>
+        <li>item four</li>
+        <li>item five</li>
+    </ul>
+
+    <h3>ordered list</h3>
+    <ol>
+        <li>item one</li>
+        <li>item two</li>
+        <li>item three</li>
+        <li>item four</li>
+        <li>item five</li>  
+    </ol>
+
+    <h3>reverse ordered list</h3>
+    <ol>
+        <li>item one</li>
+        <li>item two</li>
+        <li>item three</li>
+        <li>item four</li>
+        <li>item five</li>  
+    </ol>
+
+    <hr>
+
+    <h2>@nav</h2>
+
+    <nav>
+        <div>IAmBrand</div>
+        <ul>
+            <li>
+                <a href="/">home</a>
+            </li>
+            <li>
+                <a href="/">projects</a>
+            </li>
+            <li>
+                <a href="/">about</a>
+            </li>
+        </ul>
+    </nav>
+
+    <hr>
+
+    <h2>@header</h2>
+
+    <header>
+        <img src="images/hero.svg" alt="hero-image">
+        <h1>Heading inside header</h1>
+    </header>
+
+    <hr>
+
+    <h2>@sections</h2>
+
+    <section>
+        <h3>white section</h3>
+        <p>This will have white background</p>
+    </section>
+
+    <section>
+        <h3>off-white section</h3>
+        <p>This will have grey background</p>
+    </section>
+
+    <hr>
+    
+    <h2>@footer</h2>
+
+    <footer>
+        <div>some small headings inside footer</div>
+        <ul>
+            <li>social1</li>
+            <li>social2</li>
+            <li>social3</li>
+        </ul>
+    </footer>
+
+
+
+
+
+
+
+
+
+    <div style="height: 20ch;"></div>
+
 </body>
 </html>
