--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shaswata's Portfolio</title>
+    <!-- CSS way 1: Style Tag
+    <style>
+        body {
+            color: red;
+        }
+    </style> -->
+    <!-- CSS way 3: External Link -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- CSS way 2: Inline Tag
+    <h1 style="color: red;">Hello I am Shaswata</h1> -->
     <h1>Hello I am Shaswata</h1>
-    <p>I am learning. I am attending neog camp by Tanay Pratap and I am making a library which will make my projects look good and consistent.</p>
+    <p>I am learning. I am attending neog camp by <strong>Tanay Pratap</strong> and I am making a library which will make my projects look good and consistent.</p>
 
     <hr>
 
