--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shaswata's Portfolio</title>
+
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="favicon_io/site.webmanifest">
+    
     <!-- CSS way 1: Style Tag
     <style>
         body {
@@ -17,7 +23,7 @@
     <!-- CSS way 2: Inline Tag
     <h1 style="color: red;">Hello I am Shaswata</h1> -->
     <h1>Hello I am Shaswata</h1>
-    <p>I am learning. I am attending neog camp by <strong>Tanay Pratap</strong> and I am making a library which will make my projects look good and consistent.</p>
+    <p>I am learningg. I am attending neog camp by <strong>Tanay Pratap</strong> and I am making a library which will make my projects look good and consistent.</p>
 
     <hr>
 
@@ -139,11 +145,7 @@
 
 
 
-
-
-
-
-
+    
     <div style="height: 20ch;"></div>
 
 </body>
