--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- CSS way 2: Inline Tag
     <h1 style="color: red;">Hello I am Shaswata</h1> -->
     <h1>Hello I am Shaswata</h1>
-    <p>I am learningg. I am attending neog camp by <strong>Tanay Pratap</strong> and I am making a library which will make my projects look good and consistent.</p>
+    <p>I am learning. I am attending neog camp by <strong>Tanay Pratap</strong> and I am making a library which will make my projects look good and consistent.</p>
 
     <hr>
 
@@ -52,9 +52,8 @@
 
     <h2>@links</h2>
 
-    <a href="/">Primary Link</a>
-    <br>
-    <a href="/">Secondary Link</a>
+    <a class="link link-primary" href="/">Primary Link</a>
+    <a class="link link-secondary" href="/">Secondary Link</a>
 
     <hr>
 
