--- a/index.html
+++ b/index.html
@@ -60,30 +60,25 @@
     <h2>@lists</h2>
 
     <h3>unordered list</h3>
-    <ul>
+    <p>This list will not have the bullet</p>
+    <ul class="list-non-bullet">
         <li>item one</li>
         <li>item two</li>
         <li>item three</li>
-        <li>item four</li>
-        <li>item five</li>
     </ul>
 
-    <h3>ordered list</h3>
-    <ol>
-        <li>item one</li>
-        <li>item two</li>
-        <li>item three</li>
-        <li>item four</li>
-        <li>item five</li>  
-    </ol>
+    <h3>unordered inline list</h3>
+    <ul class="list-non-bullet">
+        <li class="list-item-inline">inline item one</li>
+        <li class="list-item-inline">inline item two</li>
+        <li class="list-item-inline">inline item three</li>
+    </ul>
 
     <h3>reverse ordered list</h3>
     <ol>
         <li>item one</li>
         <li>item two</li>
         <li>item three</li>
-        <li>item four</li>
-        <li>item five</li>  
     </ol>
 
     <hr>
