--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
         <div class="nav-brand">IAmBrand</div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
-                <a class="link link-active" href="/">home</a>
+                <a class="link link-active" href="/">HOME</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="/">projects</a>
+                <a class="link" href="/">PROJECTS</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="/">about</a>
+                <a class="link" href="/">ABOUT</a>
             </li>
         </ul>
     </nav>
