--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
 
     <h2>@header</h2>
 
-    <header>
-        <img src="images/hero.svg" alt="hero-image">
-        <h1>Heading inside header</h1>
+    <header class="hero">
+        <img class="hero-image" src="images/hero.svg" alt="hero-image">
+        <h1 class="hero-heading">Shaswata Karan <span class="heading-inverted">Developing...</span></h1>
     </header>
 
     <hr>
