--- a/index.html
+++ b/index.html
@@ -113,14 +113,18 @@
 
     <h2>@sections</h2>
 
-    <section>
-        <h3>white section</h3>
-        <p>This will have white background</p>
+    <section class="section">
+        <div class="container container-center">
+            <h1>white section</h1>
+            <p>This will have white background This will have white background This will have white background This will have white background This will have white background This will have white background This will have white background This will have white background This will have white background </p>
+        </div>
     </section>
 
-    <section>
-        <h3>off-white section</h3>
-        <p>This will have grey background</p>
+    <section class="section off-white">
+        <div class="container container-center">
+            <h1>off-white section</h1>
+            <p>This will have off white background This will have off white background This will have off white background This will have off white background This will have off white background This will have off white background This will have off white background This will have off white background</p>
+        </div>
     </section>
 
     <hr>
@@ -132,7 +136,7 @@
         <ul>
             <li>social1</li>
             <li>social2</li>
-            <li>social3</li>
+            <li>social1h1</li>
         </ul>
     </footer>
 
