--- a/index.html
+++ b/index.html
@@ -131,12 +131,18 @@
     
     <h2>@footer</h2>
 
-    <footer>
-        <div>some small headings inside footer</div>
-        <ul>
-            <li>social1</li>
-            <li>social2</li>
-            <li>social1h1</li>
+    <footer class="footer">
+        <div class="footer-header">some small headings inside footer</div>
+        <ul class="social-links list-non-bullet">
+            <li class="list-item-inline">
+                <a class="link" href="/">link1</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="/">link2</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="/">link3</a>
+            </li>
         </ul>
     </footer>
 
