updated the header

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
     <header class="hero">
         <img class="hero-image" src="images/hero.svg" alt="hero-image">
-        <h1 class="hero-heading">Shaswata Karan <span class="heading-inverted">Developing...</span></h1>
+        <h1 class="hero-heading">Shaswata Karan <span class="heading-inverted">is Developing his Portfolio...</span></h1>
     </header>
 
     <hr>
