--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <!-- stylesheet -->
     <link rel="stylesheet" href="/styles.css">
 </head>
-
 <body>
     <!-- navbar -->
     <nav class="navigation container">
@@ -34,14 +33,14 @@
         <img class="hero-image" src="/images/hero.svg" alt="hero-image">
         <h1 class="hero-heading">Shaswata Karan <span class="heading-inverted">is Developing his Portfolio...</span></h1>
     </header>
-    <!-- section -->
+    <!-- section 1 -->
     <section class="section off-white">
         <div class="container container-center">
             <h1>TECHNOLOGIES</h1>
             <p>This will have off white background This will have off white background This will have off white background This will have off white background This will have off white background This will have off white background This will have off white background This will have off white background</p>
         </div>
     </section>
-    <!-- section -->
+    <!-- section 2 -->
     <section class="section">
         <div class="container container-center">
             <h1>PROJECTS</h1>
@@ -49,7 +48,7 @@
             <a class="link link-primary" href="/">See Projects</a>
         </div>
     </section>
-    <!-- section -->
+    <!-- section 3 -->
     <section class="section off-white">
         <div class="container container-center">
             <h1>BLOGS</h1>
