updated hero image

--- a/blogs.html
+++ b/blogs.html
@@ -30,7 +30,7 @@
     </nav>
     <!-- header -->
     <header class="hero">
-        <img class="hero-image" src="/images/hero.svg" alt="hero-image">
+        <img class="hero-image" src="/images/blog.svg" alt="hero-image">
         <h1 class="hero-heading">My <span class="heading-inverted">blogs...</span></h1>
     </header>
     <!-- section 1 -->
