updated hero image

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="container container-center">
             <h1>PROJECTS</h1>
             <p>This will have white background This will have white background This will have white background This will have white background This will have white background This will have white background This will have white background This will have white background This will have white background </p>
-            <a class="link link-primary" href="/">See Projects</a>
+            <a class="link link-primary" href="projects.html">See Projects</a>
         </div>
     </section>
     <!-- section 3 -->
@@ -53,7 +53,7 @@
         <div class="container container-center">
             <h1>BLOGS</h1>
             <p>This will have off white background This will have off white background This will have off white background This will have off white background This will have off white background This will have off white background This will have off white background This will have off white background</p>
-            <a class="link link-secondary" href="/">Read Blogs</a>
+            <a class="link link-secondary" href="blogs.html">Read Blogs</a>
         </div>
     </section>
     <!-- footer -->
