updated projects & changed hero image

--- a/projects.html
+++ b/projects.html
@@ -30,29 +30,38 @@
     </nav>
     <!-- header -->
     <header class="hero">
-        <img class="hero-image" src="/images/hero.svg" alt="hero-image">
+        <img class="hero-image" src="/images/project.svg" alt="hero-image">
         <h1 class="hero-heading">My <span class="heading-inverted">projects...</span></h1>
     </header>
-    <!-- section 1 -->
+    <!-- section -->
     <section class="section off-white">
 
     <ol reversed>
         <li>
             <div class="container container-center">
-                <h1>How well do you know me</h1>
+                <h1>Portfolio Website</h1>
                 <small>September, 2023</small>
-                <p>A cli app built with <strong>nodejs</strong>. You can send this to your friends to check how well they know you.</p>
+                <p>It is my personal portfolio website built using <strong>HTML, CSS, nodejs.</strong></p>
+                <a class="link link-primary" href="shaswatakaran.netlify.app/">LIVE PROJECT</a>
+                <a class="link link-secondary" href="https://github.com/shaswata-karan/portfolio">VIEW SOURCE ON GITHUB</a>
+            </div>
+        </li>
+        <li>
+            <div class="container container-center">
+                <h1>Fandom quiz. CLI Quiz App</h1>
+                <small>September, 2023</small>
+                <p>A CLI web-app built using <strong>nodejs</strong>. You can send this to your friends to play a quiz game.</p>
                 <a class="link link-primary" href="/">LIVE PROJECT</a>
                 <a class="link link-secondary" href="/">VIEW SOURCE ON GITHUB</a>
             </div>
         </li>
         <li>
             <div class="container container-center">
-                <h1>How well do you know me</h1>
+                <h1>Do you know me? CLI Quiz App</h1>
                 <small>September, 2023</small>
-                <p>A cli app built with <strong>nodejs</strong>. You can send this to your friends to check how well they know you.</p>
+                <p>A CLI web-app built using <strong>nodejs</strong>. You can send this to your friends to check how well do they know you.</p>
                 <a class="link link-primary" href="/">LIVE PROJECT</a>
-                <a class="link link-secondary" href="/">VIEW SOURCE ON GITHUB</a>
+                <a class="link link-secondary" href="https://github.com/shaswata-karan/neogcamp-cli-quizz-app">VIEW SOURCE ON GITHUB</a>
             </div>
         </li>
     </ol>
