updated target tag

--- a/projects.html
+++ b/projects.html
@@ -42,8 +42,8 @@
                 <h1>Portfolio Website</h1>
                 <small>September, 2023</small>
                 <p>It is my personal portfolio website built using <strong>HTML, CSS, nodejs.</strong></p>
-                <a class="link link-primary" href="shaswatakaran.netlify.app/">LIVE PROJECT</a>
-                <a class="link link-secondary" href="https://github.com/shaswata-karan/portfolio">VIEW SOURCE ON GITHUB</a>
+                <a class="link link-primary" href="https://shaswatakaran.netlify.app/" target="_blank">LIVE PROJECT</a>
+                <a class="link link-secondary" href="https://github.com/shaswata-karan/portfolio" target="_blank">VIEW SOURCE ON GITHUB</a>
             </div>
         </li>
         <li>
@@ -51,8 +51,8 @@
                 <h1>Fandom quiz. CLI Quiz App</h1>
                 <small>September, 2023</small>
                 <p>A CLI web-app built using <strong>nodejs</strong>. You can send this to your friends to play a quiz game.</p>
-                <a class="link link-primary" href="/">LIVE PROJECT</a>
-                <a class="link link-secondary" href="/">VIEW SOURCE ON GITHUB</a>
+                <a class="link link-primary" href="/" target="_blank">LIVE PROJECT</a>
+                <a class="link link-secondary" href="https://github.com/shaswata-karan/neogcamp-cli-fandom-quizz-app" target="_blank">VIEW SOURCE ON GITHUB</a>
             </div>
         </li>
         <li>
@@ -60,8 +60,8 @@
                 <h1>Do you know me? CLI Quiz App</h1>
                 <small>September, 2023</small>
                 <p>A CLI web-app built using <strong>nodejs</strong>. You can send this to your friends to check how well do they know you.</p>
-                <a class="link link-primary" href="/">LIVE PROJECT</a>
-                <a class="link link-secondary" href="https://github.com/shaswata-karan/neogcamp-cli-quizz-app">VIEW SOURCE ON GITHUB</a>
+                <a class="link link-primary" href="/" target="_blank">LIVE PROJECT</a>
+                <a class="link link-secondary" href="https://github.com/shaswata-karan/neogcamp-cli-quizz-app" target="_blank">VIEW SOURCE ON GITHUB</a>
             </div>
         </li>
     </ol>
@@ -71,13 +71,13 @@
         <div class="footer-header">Let's connect 🚀</div>
         <ul class="social-links list-non-bullet">
             <li class="list-item-inline">
-                <a class="link" href="https://github.com/shaswata-karan">GitHub</a>
+                <a class="link" href="https://github.com/shaswata-karan" target="_blank">GitHub</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="https://www.linkedin.com/in/shaswata-karan-08b194197/">linkedin</a>
+                <a class="link" href="https://www.linkedin.com/in/shaswata-karan-08b194197/" target="_blank">linkedin</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="https://www.instagram.com/shaswata.karan/">Instagram</a>
+                <a class="link" href="https://www.instagram.com/shaswata.karan/" target="_blank">Instagram</a>
             </li>
         </ul>
     </footer>
