--- a/blogs.html
+++ b/blogs.html
@@ -38,15 +38,15 @@
         <div class="container container-center">
             <h1>Blog 1</h1>
             <p>to be added</p>
-            <a class="link link-secondary" href="/">Read Blog</a>
+            <a class="link link-secondary" href="/" target="_blank">Read Blog</a>
         </div>
     </section>
     <!-- section 2 -->
-    <section class="section">
+    <section class="section off-white">
         <div class="container container-center">
             <h1>Blog 2</h1>
             <p>to be added</p>
-            <a class="link link-secondary" href="/">Read Blog</a>
+            <a class="link link-secondary" href="/" target="_blank">Read Blog</a>
         </div>
     </section>
     <!-- footer -->
@@ -54,13 +54,13 @@
         <div class="footer-header">Let's connect 🚀</div>
         <ul class="social-links list-non-bullet">
             <li class="list-item-inline">
-                <a class="link" href="https://github.com/shaswata-karan">GitHub</a>
+                <a class="link" href="https://github.com/shaswata-karan" target="_blank">GitHub</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="https://www.linkedin.com/in/shaswata-karan-08b194197/">linkedin</a>
+                <a class="link" href="https://www.linkedin.com/in/shaswata-karan-08b194197/" target="_blank">linkedin</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="https://www.instagram.com/shaswata.karan/">Instagram</a>
+                <a class="link" href="https://www.instagram.com/shaswata.karan/" target="_blank">Instagram</a>
             </li>
         </ul>
     </footer>
