--- a/blogs.html
+++ b/blogs.html
@@ -38,7 +38,7 @@
         <div class="container container-center">
             <h1>Blog 1</h1>
             <p>to be added</p>
-            <a class="link link-secondary" href="/" target="_blank">Read Blog</a>
+            <a class="link link-secondary" href="/">Read Blog</a>
         </div>
     </section>
     <!-- section 2 -->
