--- a/projects.html
+++ b/projects.html
@@ -36,9 +36,9 @@
     <!-- section -->
     <section class="section off-white">
 
-    <ol reversed>
-        <li>
-            <div class="container container-center">
+    <ol reversed class="container container-center">
+        <li class="section-list-padding">
+            <div>
                 <h1>Portfolio Website</h1>
                 <small>September, 2023</small>
                 <p>It is my personal portfolio website built using <strong>HTML, CSS, nodejs.</strong></p>
@@ -46,8 +46,8 @@
                 <a class="link link-secondary" href="https://github.com/shaswata-karan/portfolio" target="_blank">VIEW SOURCE ON GITHUB</a>
             </div>
         </li>
-        <li>
-            <div class="container container-center">
+        <li class="section-list-padding">
+            <div>
                 <h1>Fandom quiz. CLI Quiz App</h1>
                 <small>September, 2023</small>
                 <p>A CLI web-app built using <strong>nodejs</strong>. You can send this to your friends to play a quiz game.</p>
@@ -55,8 +55,8 @@
                 <a class="link link-secondary" href="https://github.com/shaswata-karan/neogcamp-cli-fandom-quizz-app" target="_blank">VIEW SOURCE ON GITHUB</a>
             </div>
         </li>
-        <li>
-            <div class="container container-center">
+        <li class="section-list-padding">
+            <div>
                 <h1>Do you know me? CLI Quiz App</h1>
                 <small>September, 2023</small>
                 <p>A CLI web-app built using <strong>nodejs</strong>. You can send this to your friends to check how well do they know you.</p>
