--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
         <div class="footer-header">Let's connect 🚀</div>
         <ul class="social-links list-non-bullet">
             <li class="list-item-inline">
-                <a class="link" href="https://github.com/shaswata-karan">GitHub</a>
+                <a class="link" href="https://github.com/shaswata-karan" target="_blank">GitHub</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="https://www.linkedin.com/in/shaswata-karan-08b194197/">linkedin</a>
+                <a class="link" href="https://www.linkedin.com/in/shaswata-karan-08b194197/" target="_blank">linkedin</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="https://www.instagram.com/shaswata.karan/">Instagram</a>
+                <a class="link" href="https://www.instagram.com/shaswata.karan/" target="_blank">Instagram</a>
             </li>
         </ul>
     </footer>
