--- a/blogs.html
+++ b/blogs.html
@@ -35,19 +35,30 @@
     </header>
     <!-- section 1 -->
     <section class="section off-white">
-        <div class="container container-center">
-            <h1>Blog 1</h1>
-            <p>to be added</p>
-            <a class="link link-secondary" href="/">Read Blog</a>
-        </div>
-    </section>
-    <!-- section 2 -->
-    <section class="section off-white">
-        <div class="container container-center">
-            <h1>Blog 2</h1>
-            <p>to be added</p>
-            <a class="link link-secondary" href="/" target="_blank">Read Blog</a>
-        </div>
+
+        <ul class="container container-center list-non-bullet">
+            <li class="section-list-padding">
+                <div>
+                <h1>Blog 1</h1>
+                <p>to be added</p>
+                <a class="link link-secondary" href="/">Read Blog</a>
+                </div>
+            </li>
+            <li class="section-list-padding">
+                <div>
+                <h1>Blog 2</h1>
+                <p>to be added</p>
+                <a class="link link-secondary" href="/">Read Blog</a>
+                </div>
+            </li>
+            <li class="section-list-padding">
+                <div>
+                <h1>Blog 3</h1>
+                <p>to be added</p>
+                <a class="link link-secondary" href="/">Read Blog</a>
+                </div>
+            </li>
+        </ul>
     </section>
     <!-- footer -->
     <footer class="footer">
