updated section writeups

--- a/index.html
+++ b/index.html
@@ -33,26 +33,26 @@
         <img class="hero-image" src="/images/hero.svg" alt="hero-image">
         <h1 class="hero-heading">Shaswata Karan <span class="heading-inverted">is Developing his Portfolio...</span></h1>
     </header>
-    <!-- section 1 -->
+    <!-- section 1 - TECHNOLOGIES -->
     <section class="section off-white">
         <div class="container container-center">
             <h1>TECHNOLOGIES</h1>
-            <p>This will have off white background This will have off white background This will have off white background This will have off white background This will have off white background This will have off white background This will have off white background This will have off white background</p>
+            <p>Explore the cutting-edge technologies I’m proficient in, from programming languages like Python and JavaScript to frameworks such as React and Django. Stay up-to-date with the ever-evolving tech landscape.</p>
         </div>
     </section>
-    <!-- section 2 -->
+    <!-- section 2 - PROJECTS -->
     <section class="section">
         <div class="container container-center">
             <h1>PROJECTS</h1>
-            <p>This will have white background This will have white background This will have white background This will have white background This will have white background This will have white background This will have white background This will have white background This will have white background </p>
+            <p>Browse through a diverse range of my innovative projects, showcasing problem-solving skills in web development, data analysis, and more. Each project reflects a unique blend of creativity and technical expertise.</p>
             <a class="link link-primary" href="projects.html">See Projects</a>
         </div>
     </section>
-    <!-- section 3 -->
+    <!-- section 3 - BLOGS -->
     <section class="section off-white">
         <div class="container container-center">
             <h1>BLOGS</h1>
-            <p>This will have off white background This will have off white background This will have off white background This will have off white background This will have off white background This will have off white background This will have off white background This will have off white background</p>
+            <p>Discover insightful blog posts covering topics in tech, design, and development. Dive into thought-provoking articles that share my passion for innovation and offer valuable insights into industry trends.</p>
             <a class="link link-secondary" href="blogs.html">Read Blogs</a>
         </div>
     </section>
