updated rel = "noopener"

--- a/blogs.html
+++ b/blogs.html
@@ -65,13 +65,13 @@
         <div class="footer-header">Let's connect 🚀</div>
         <ul class="social-links list-non-bullet">
             <li class="list-item-inline">
-                <a class="link" href="https://github.com/shaswata-karan" target="_blank">GitHub</a>
+                <a class="link" href="https://github.com/shaswata-karan" target="_blank" rel="noopener">GitHub</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="https://www.linkedin.com/in/shaswata-karan-08b194197/" target="_blank">linkedin</a>
+                <a class="link" href="https://www.linkedin.com/in/shaswata-karan-08b194197/" target="_blank" rel="noopener">linkedin</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="https://www.instagram.com/shaswata.karan/" target="_blank">Instagram</a>
+                <a class="link" href="https://www.instagram.com/shaswata.karan/" target="_blank" rel="noopener">Instagram</a>
             </li>
         </ul>
     </footer>
