--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <section class="section off-white">
         <div class="container container-center">
             <h1>TECHNOLOGIES</h1>
-            <p>Explore the cutting-edge technologies I’m proficient in, from programming languages like Python and JavaScript to frameworks such as React and Django. Stay up-to-date with the ever-evolving tech landscape.</p>
+            <p>Exploring the cutting-edge technologies I’m proficient in, from programming languages like Java, Python and JavaScript to frameworks such as React. Staying up-to-date with the ever-evolving tech landscape.</p>
         </div>
     </section>
     <!-- section 2 - PROJECTS -->
